<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/icons"
    app:cardCornerRadius="@dimen/marginEight"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/marginTopTen">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Image_edit"
                android:layout_width="@dimen/marginOneHandredFifty"
                android:layout_height="@dimen/marginOneHandred"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/Image_edit"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    style="@style/CardViewStyleDataProductName"
                    android:text="@string/product_name" />

                <TextView
                    android:id="@+id/tv_product_name"
                    style="@style/CardViewStyleNameProduct"
                    android:layout_toLeftOf="@+id/Image_edit"

                    />


            </LinearLayout>


        </RelativeLayout>


        <TableRow>

            <TextView
                android:id="@+id/tv_product_price"
                style="@style/CardViewStyleMain" />

            <TextView
                style="@style/CardViewStyleData"
                android:text="@string/product_price" />

            <TextView
                android:id="@+id/tv_product_quantity"
                style="@style/CardViewStyleMain"

                />

            <TextView
                style="@style/CardViewStyleData"
                android:text="@string/product_quantity" />


        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt_sale"
                style="@style/ButtonSale"
                android:text="@string/bt_sale" />

            <Button
                android:id="@+id/bt_edit"
                style="@style/ButtonSale"
                android:text="@string/bt_edit" />


        </TableRow>
    </TableLayout>

</android.support.v7.widget.CardView>